--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Rodrigo Cortez
 description: ENES Morelia 2020
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "tesis" # the subpath of your site, e.g. /blog
 url: "https://roicort.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
