--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Rodrigo Cortez
-description: ENES Morelia 2020
+title: “GraphletTweemes”
+description: “Aprendizaje no supervisado para el estudio de redes temáticas de Twitter”
 baseurl: "/TesisGraphlets" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
