--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,2 +1,9 @@
-source "https://rubygems.org"
-gemspec
+source 'https://rubygems.org'
+gem 'bundler'
+gem 'jekyll'
+gem 'jekyll-sitemap'
+gem 'wdm', '>= 0.1.0'
+gem "webrick", "~> 1.7"
+
+
+gem "jekyll-seo-tag", "~> 2.7"
