--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         uses: canastro/copy-file-action@master
         with:
           source: "baseline/results/*"
-          target: "docs/docs/baseline/"
+          target: "../../docs/docs/baseline/"
           
       # Runs a single command using the runners shell
       - name: Run a one-line script
