--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,8 +2,6 @@ source 'https://rubygems.org'
 gem 'bundler'
 gem 'jekyll'
 gem 'jekyll-sitemap'
-gem 'wdm', '>= 0.1.0'
-gem "webrick", "~> 1.7"
-
-
-gem "jekyll-seo-tag", "~> 2.7"
+gem 'wdm'
+gem "webrick"
+gem "jekyll-seo-tag"
